修改子模组目录名

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "yasmate"]
 	path = yasmate
 	url = git@github.com:ruleless/yasmate.git
-[submodule "yasnippet-snippets"]
-	path = yasnippet-snippets
+[submodule "snippets"]
+	path = snippets
 	url = git@github.com:ruleless/yasnippet-snippets.git
